--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "dependencies": {
     "lru-cache": "^6.0.0",
     "markdown-it": "^12.3.0",
-    "next": "12.0.7",
-    "react": "17.0.2",
+    "next": "^12.0.8",
+    "react": "^17.0.2",
     "react-collapse": "^5.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
