--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "lru-cache": "^6.0.0",
     "markdown-it": "^12.3.0",
     "next": "^12.0.8",
@@ -31,9 +32,11 @@
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "sharp": "^0.29.3",
-    "web-platform-alpha": "0.0.1-alpha.20"
+    "web-platform-alpha": "0.0.1-alpha.20",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@types/lru-cache": "^5.1.1",
@@ -44,7 +47,7 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "husky": "^7.0.4",
-    "sass": "^1.45.0",
+    "sass": "^1.49.0",
     "typescript": "4.5.4"
   }
 }
